[metadata]
name = Minuet
url = https://github.com/UofT-EcoSystem/Minuet
version = 0.0.1
project_urls =
    Source Code = https://github.com/UofT-EcoSystem/Minuet
    Bug Tracker = https://github.com/UofT-EcoSystem/Minuet/issues
author = Jiacheng Yang
author_email = kipsora@gmail.com
maintainer = Jiacheng Yang
maintainer_email = kipsora@gmail.com
description = A Faster Library for Sparse Minkowski Networks
long_description = file:README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files = file:LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 1 - Planning

[options]
packages = find:
python_requires = >=3.7
install_requires =
    torch
    tqdm
    requests
    termcolor
    pybind11
    ninja
    cmake
    packaging
    numpy

[yapf]
based_on_style = google
indent_width = 2
spaces_around_power_operator = true
split_before_arithmetic_operator = true
split_before_logical_operator = true
split_before_bitwise_operator = true
